# email-chat-buddy

./: .gitignore  README.md  app.py  db.py  fetch_emails.py  models.py  pyproject.toml  st_app.py
email_rag/: .env  pyproject.toml
email_rag/email_rag/: api.py  db.py  models.py
