[tool.poetry]
name = "email-rag"
version = "0.1.0"
description = ""
authors = ["Puranjai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
chromadb = "^0.5.18"
groq = "^0.11.0"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
